--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-gulp-ionic",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "a yoeman generator inspired by generator-ionic-gulp and generator-gulp-angular, ionic generator with gulp-angular project structure",
   "homepage": "",
   "author": {
@@ -18,12 +18,13 @@
   "dependencies": {
     "yeoman-generator": "^0.23.0",
     "chalk": "^1.0.0",
-    "yosay": "^1.0.0"
+    "yosay": "^1.0.0",
+    "glob": "^7.0.3",
+    "path": "^0.12.7",
   },
   "devDependencies": {
     "eslint": "^2.1.0",
     "eslint-config-xo-space": "^0.13.0",
-    "glob": "^7.0.3",
     "gulp": "^3.9.0",
     "gulp-eslint": "^2.0.0",
     "gulp-exclude-gitignore": "^1.0.0",
@@ -32,7 +33,6 @@
     "gulp-mocha": "^2.0.0",
     "gulp-nsp": "^2.1.0",
     "gulp-plumber": "^1.0.0",
-    "path": "^0.12.7",
     "yeoman-assert": "^2.0.0",
     "yeoman-test": "^1.0.0"
   },
