update readme, update versin to 1.1.4

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,15 @@
 .idea
 *.iws
 
+
 #Web
 node_modules/
 dist/
 bower_components/
+.tmp/
+platforms
+www/
+ENV.js
+plugins/
+test/
+.ENVTemplate.json
