bug fix: https://github.com/njleonzhang/generator-gulp-ionic/issues/5

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-gulp-ionic",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "a yoeman generator inspired by generator-ionic-gulp and generator-gulp-angular, ionic generator with gulp-angular project structure",
   "homepage": "https://github.com/njleonzhang/generator-gulp-ionic",
   "author": {
@@ -11,13 +11,15 @@
   "files": [
     "generators/app",
     "generators/constant",
+    "generators/directive"
     "generators/factory",
+    "generators/filter",
+    "generators/page",
     "generators/provider",
     "generators/service",
-    "generators/templates",
+    "generators/tinyDirective",
     "generators/value",
-    "generators/script-base.js",
-    "generators/util.js"
+    "generators/generator-base.js"
   ],
   "main": "generators/app/index.js",
   "keywords": [
